<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference android:title="@string/pref_position_get">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference>
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_position_set_def"
        android:inputType="textCapWords"
        android:key="position_manual"
        android:maxLines="2"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/pref_position_set" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="100"
        android:entryValues="@array/pref_position_distance_Names"
        android:entries="@array/pref_position_distance_values"
        android:key="distance_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_position_distance" />

</PreferenceScreen>
